template file updated
club login file

--- a/template/view/html/club/dashboard.html
+++ b/template/view/html/club/dashboard.html
@@ -194,7 +194,7 @@
                                                         <th>Month</th>
                                                         <th>Projects Title</th>
                                                         <th>Projects Cost</th>
-                                                        <th>Category</th>
+                                                        <th>No of Beneficiary</th>
                                                         <th>Points</th>
                                                         <th>Action</th>
                                                     </tr>
